docs(readme): update guide for Java 21/26 and add project structure
- Update README.md to reflect features and configurations for Java 21 to 26 LTS.
- Add a detailed directory structure mapping out the 12 modern Java modules.
- Update build and execution instructions, including PowerShell script usage and preview flag requirements.
- Expand the language comparison table to cover modern Java paradigms.